--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -58,7 +58,7 @@
                         <p class="plan-price"><b>Donate</b></p>
                     </div>
                     <div>
-                        <a href="#" class="btn btn-ghost">Now</a>
+                        <a href="/new_donation" class="btn btn-ghost">Now</a>
                     </div>
                 </div>
             </div>
@@ -66,11 +66,11 @@
                 <div class="plan-box">
                     <div>
                         
-                        <p class="plan-price"><b>Fundraiser</b> </p>
+                        <p class="plan-price"><b>Create Fundraiser</b> </p>
                         
                     </div>
                     <div>
-                        <a href="#" class="btn btn-ghost">Now</a>
+                        <a href="/new_fundraiser" class="btn btn-ghost">Now</a>
                     </div>
                 </div>
             </div>
@@ -78,11 +78,11 @@
                 <div class="plan-box">
                     <div>
                         
-                        <p class="plan-price"><b>Volunteer</b></p>
+                        <p class="plan-price"><b>Browse Fundraisers</b></p>
                       
                     </div>
                     <div>
-                        <a href="#" class="btn btn-ghost">Now</a>
+                        <a href="/fundraiserlist" class="btn btn-ghost">Now</a>
                     </div>
                 </div>
             </div>
