--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,7 +41,7 @@
 			<div class="headline-text-box">
 				<h1 style="font-size:55px;"><b>SocioCollabs</b><br><h1 style="font-size: 40px;">Alone we can do so little!<br>Together we can do so much!</h1>
 				<a class="btn btn-full" href="#">Donate Now</a>
-				<a class="btn btn-full" href="#">Volunteer Now</a>
+				<a class="btn btn-full" href="#contact-form"">Contact Us</a>
 			</div>
 		</div>
     </header>
@@ -55,7 +55,7 @@
                 <div class="plan-box">
                     <div>
                         
-                        <p class="plan-price"><b>Donate</b></p>
+                        <p class="plan-price"><b>Donate to Fundraisers</b></p>
                     </div>
                     <div>
                         <a href="/new_donation" class="btn btn-ghost">Now</a>
@@ -159,8 +159,8 @@
 
     {% include 'footer.html' %}
 
-     JavaScript Bundle with Popper 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+     <!--JavaScript Bundle with Popper 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>-->
       
 </body>
 </html>
