--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -31,7 +31,7 @@
           <a href="/">Home</a>
           <a href="/dashboard" target="_blank">Dashboard</a>
           <!--<a href="#" target="_blank">About us</a>-->
-          <a href="#contact-form" target="_blank">Contact</a>
+          <!--<a href="#contact-form" target="_blank">Contact</a>-->
           <a href="/login" target="_blank">Login</a>
           <a href="/register" target="_blank">Register</a>
         </div>
