--- a/app/templates/post_fundraiser.html
+++ b/app/templates/post_fundraiser.html
@@ -56,7 +56,9 @@
                             {{ form.created_by(class="form-control") }}
                             <label for="floatingInput">Your name</label>
                         </div>
-                        <br />
+                       <!--- <input type="file" name="file"><br>
+                        <input type="submit" value="Upload">
+                        <br />-->
                         <!--
                         <div class="checkbox mb-3">
                             <label>
@@ -69,7 +71,12 @@
                             Dont have an account? <a href="{{ url_for('register') }}" class="text-right">Register</a>
                         </small> -->
                     </form>
+        
                 </div>
+               <!----<form method=post enctype=multipart/form-data>
+                    <input type=file name=file>
+                    <input type=submit value=Upload>
+                  </form>-->
             </div>
         </div>
 
