--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -40,8 +40,9 @@
         </div>
  
         <div class="searchbar">
-            <input type="text"
-                   placeholder="Search">
+            <!--<input type="text"
+                   placeholder="Search">-->
+                   <a href="/fundraiserlist" target="_blank">Browse Fundraisers</a>
             <div class="searchbtn">
               <img src=
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210180758/Untitled-design-(28).png"
@@ -153,16 +154,16 @@
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210185029/13.png" alt="published">
                 </div>
  
-                <div class="box box3">
+               <!---<div class="box box3">
                     <div class="text">
-                        <h2 class="topic-heading">320</h2>
+                        <h2 class="topic-heading">2</h2>
                         <h2 class="topic">Volunteered For</h2>
                     </div>
  
                     
                         <img src=
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210185029/13.png" alt="published">
-                </div>
+                </div>-->
  
                 
  
