Added Payment Gateway

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -58,7 +58,7 @@
                         <p class="plan-price"><b>Donate to Fundraisers</b></p>
                     </div>
                     <div>
-                        <a href="/new_donation" class="btn btn-ghost">Now</a>
+                        <a href="/new_donation2" class="btn btn-ghost">Now</a>
                     </div>
                 </div>
             </div>
