--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -42,7 +42,7 @@
         <div class="searchbar">
             <!--<input type="text"
                    placeholder="Search">-->
-                   <a href="/fundraiserlist" target="_blank">Browse Fundraisers</a>
+                   <a href="/fundraiserlist" target="_blank"><strong><button style="height: 50px; width: 180px; color:#4b49ac ; font-size: 15px ;font-weight: 600;">Browse Fundraisers</button> </strong></a>
             <div class="searchbtn">
               <img src=
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210180758/Untitled-design-(28).png"
