--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -41,17 +41,17 @@
                         <br />
 
                         <div class="form-floating mb-3">
+                            <label for="floatingInput">Username     : </label>
                             {{ form.username(class="form-control") }}
-                            <label for="floatingInput">Username</label>
                         </div>
 
                         <div class="form-floating mb-3">
+                            <label for="floatingInput">Email id : </label>
                             {{ form.email(class="form-control") }}
-                            <label for="floatingInput">Email address</label>
                         </div>
                         <div class="form-floating mb-3">
+                            <label for="floatingPassword">Password      : </label>
                             {{ form.password(class="form-control", type="password") }}
-                            <label for="floatingPassword">Password</label>
                         </div>
                         <br />
                         <!--
