--- a/app/templates/index2.html
+++ b/app/templates/index2.html
@@ -19,6 +19,7 @@ Socio-Collabs
         <input class="form-control" name="email" placeholder="Email" type="email" required>
         <input class="form-control" name = "name" placeholder="Name" type="text" required>
         <input class="form-control" name="amount" placeholder="Amount" type="number" required>
+        <input class="form-control" name="fundraiser_name" placeholder="fundraiser_name" type="text" required>
         <button class="btn btn-success bnt-block">Donate </button>
         
         </form>
