--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -32,7 +32,10 @@
           <a href="/dashboard" target="_blank">Dashboard</a>
           <!--<a href="#" target="_blank">About us</a>-->
           <!--<a href="#contact-form" target="_blank">Contact</a>-->
+          {% if logged_in %}
+          {% else %}
           <a href="/login" target="_blank">Login</a>
           <a href="/register" target="_blank">Register</a>
+          {% endif %}
         </div>
       </div>
