--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -5,13 +5,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Payment</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> 
+<link rel="stylesheet" href="/static/assets/css/custom.css">
 </head>
 <body>
-<nav class="navbar navbar-dark bg-dark">
+    {% include 'navigation.html' %}
+<!--<nav class="navbar navbar-dark bg-dark">
 <a class="navbar-brand" href="#">
 Socio-Collabs
 </a>
-</nav>
+</nav>-->
 <h2 class="text-center">Thanks for Donation! ❤</h2>
 </body>
+{% include 'footer.html' %}
 </html>
