--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -101,7 +101,7 @@
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210183320/4.png"
                             class="nav-img"
                             alt="settings">
-                        <h3> Settings</h3>
+                        <h3> <a href=new_fundraiser>Create Fundraisers</a></h3>
                     </div>
  
                     <div class="nav-option logout">
@@ -165,7 +165,6 @@
 "https://media.geeksforgeeks.org/wp-content/uploads/20221210185029/13.png" alt="published">
                 </div>-->
  
-                
  
            <div class="report-container">
                 <div class="report-header">
