--- a/app/templates/fundraiserlist.html
+++ b/app/templates/fundraiserlist.html
@@ -1,9 +1,11 @@
+{% include 'navigation.html' %}
+
 <h1 class="pt-5 pb-2">List of Fundraisers</h1>
 
       <p class="lead alert alert-warning">This is a list of all the active Fundraisers
 			  </p>
 
-	  <p class="ml-4"><a href="{{ url_for('index') }}">Return to the homePage.</a></p>
+	  <!--<p class="ml-4"><a href="{{ url_for('index') }}">Return to the homePage.</a></p>-->
 
 		<!--<table class="table">
 			<tr>
@@ -14,7 +16,7 @@
 				
 			</tr>
 
-			<!-- here is a for-loop to give us all the socks --
+			< here is a for-loop to give us all the socks --
 			{% for fundraiser in Fundraisers %}
 			<tr>
 				<td>{{fundraiser.name }}</td>
@@ -30,12 +32,15 @@
 
 
 		<style>
+			.body{
+				background-color:#f7d9e0;
+			}
 			div.gallery {
-			  border: 1px solid #ccc;
+			  border: 2px solid #ccc;
 			}
 			
 			div.gallery:hover {
-			  border: 1px solid #777;
+			  border: 2px solid #777;
 			}
 			
 			div.gallery img {
@@ -46,6 +51,7 @@
 			div.desc {
 			  padding: 15px;
 			  text-align: center;
+			  align-items: center;
 			}
 			
 			* {
@@ -57,6 +63,15 @@
 			  float: left;
 			  width: 24.99999%;
 			}
+			.button {
+             background-color: #CE015C; 
+             color: white;
+             padding: 15px 32px;
+             text-align: center;
+             text-decoration: none;
+             display: inline-block;
+            font-size: 16px;
+            }
 			
 			@media only screen and (max-width: 700px) {
 			  .responsive {
@@ -79,56 +94,22 @@
 			</style>
 			</head>
 			<body>
-			
-			<h2>Responsive Image Gallery</h2>
-			
-			<!--<h4>Resize the browser window to see the effect.</h4>-->
-
+				
 			{% for fundraiser in Fundraisers %}
 			<div class="responsive">
 			  <div class="gallery">
-				<a target="_blank" href="app/static/assets/uploads/happy_dog.jpeg">
+				<!--<a target="_blank" href="app/static/assets/uploads/happy_dog.jpeg">
 				  <img src="app/static/assets/uploads/happy_dog.jpeg" alt="Cinque Terre" width="500" height="500">
-				</a>
-				<div class="desc">
-					Fundraiser Name : {{fundraiser.name }}<br>
-				    Amount to be raised: {{fundraiser.amount }}<br>
-				    Summary : {{fundraiser.summary}} <br>
-				    Created By: {{fundraiser.created_by }}</div>
+				</a>-->
+				<div class="desc"><h3>Fundraiser Name : {{fundraiser.name }}<br></h3>
+				    <h4>Amount to be raised: {{fundraiser.amount }}<br></h4>
+				    <strong>Summary :</strong>  {{fundraiser.summary}} <br>
+					<br>
+				    <strong>Created By:</strong> {{fundraiser.created_by }}</div>
+					<a href="/new_donation2" class="button">Now</a>
 			  </div>
 			</div>
 			{% endfor %}
+				
+			</body>
 			
-			<!--<div class="responsive">
-			  <div class="gallery">
-				<a target="_blank" href="img_forest.jpg">
-				  <img src="img_forest.jpg" alt="Forest" width="600" height="400">
-				</a>
-				<div class="desc">Add a description of the image here</div>
-			  </div>
-			</div>
-			
-			<div class="responsive">
-			  <div class="gallery">
-				<a target="_blank" href="img_lights.jpg">
-				  <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
-				</a>
-				<div class="desc">Add a description of the image here</div>
-			  </div>
-			</div>
-			
-			<div class="responsive">
-			  <div class="gallery">
-				<a target="_blank" href="img_mountains.jpg">
-				  <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
-				</a>
-				<div class="desc">Add a description of the image here</div>
-			  </div>
-			</div>
-		-->
-		<!---<div class="clearfix"></div>
-			
-			<div style="padding:6px;">
-			  <p>This example use media queries to re-arrange the images on different screen sizes: for screens larger than 700px wide, it will show four images side by side, for screens smaller than 700px, it will show two images side by side. For screens smaller than 500px, the images will stack vertically (100%).</p>
-			  <p>You will learn more about media queries and responsive web design later in our CSS Tutorial.</p>
-			</div>-->
