--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,23 +9,12 @@
 <title>SocioCollab</title>
 
 <!-- CSS only -->
-<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">-->
 <link rel="stylesheet" href="/static/assets/css/custom.css">
 <link rel="stylesheet" href="/static/assets/css/style.css">
 <link rel="stylesheet" href="/static/assets/css/vendors/css/grid.css">
 <link rel="stylesheet" href="/static/assets/css/vendors/css/normalize.css">
 <link rel="stylesheet" href="/static/assets/css/resources/css/style.css">
 <link rel="stylesheet" href="/static/assets/css/resources/css/queries.css">
-
-
-
-
-<!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-
-<!--<link rel="stylesheet" href="vendors/css/grid.css">
-<link rel="stylesheet" href="vendors/css/normalize.css">
-<link rel="stylesheet" href="resources/css/style.css">
-<link rel="stylesheet" href="resources/css/queries.css">-->
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic">
 
 </head>
@@ -40,7 +29,7 @@
         <div class="row">
 			<div class="headline-text-box">
 				<h1 style="font-size:55px;"><b>SocioCollabs</b><br><h1 style="font-size: 40px;">Alone we can do so little!<br>Together we can do so much!</h1>
-				<a class="btn btn-full" href="#">Donate Now</a>
+				<a class="btn btn-full" href="/new_donation2">Donate Now</a>
 				<a class="btn btn-full" href="#contact-form">Contact Us</a>
 			</div>
 		</div>
@@ -164,9 +153,6 @@
     </main>
 
     {% include 'footer.html' %}
-
-     <!--JavaScript Bundle with Popper 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>-->
       
 </body>
 </html>
