--- a/app/templates/fundraiserlist.html
+++ b/app/templates/fundraiserlist.html
@@ -106,7 +106,7 @@
 				    <strong>Summary :</strong>  {{fundraiser.summary}} <br>
 					<br>
 				    <strong>Created By:</strong> {{fundraiser.created_by }}</div>
-					<a href="/new_donation2" class="button">Now</a>
+					<a href="/new_donation2" class="button">Contribute Now</a>
 			  </div>
 			</div>
 			{% endfor %}
