--- a/app/templates/index2.html
+++ b/app/templates/index2.html
@@ -14,10 +14,12 @@
 Socio-Collabs
 </a>
 </nav>
-
+     <h3>Hi {{name}} ! </h3>
+     <div>Email-{{email}}</div>
+     <div>Please confirm your donation details</div>
     <form method="post" >
-        <input class="form-control" name="email" placeholder="Email" type="email" required>
-        <input class="form-control" name = "name" placeholder="Name" type="text" required>
+       <!--- <input class="form-control" name="email" placeholder="Email" type="email" required>
+        <input class="form-control" name = "name" placeholder="Name" type="text" required>-->
         <input class="form-control" name="amount" placeholder="Amount" type="number" required>
         <input class="form-control" name="fundraiser_name" placeholder="fundraiser_name" type="text" required>
         <button class="btn btn-success bnt-block">Donate </button>
