--- a/app/templates/post_fundraiser.html
+++ b/app/templates/post_fundraiser.html
@@ -21,7 +21,7 @@
             <div class="row align-items-center g-lg-5 py-5">
                 <div class="col-lg-7 text-center text-lg-start">
                     <h1 class="display-4 fw-bold lh-1 mb-3">
-                        Create your fundraiser!
+                        Hi {{created_by}} - Create your fundraiser!
                     </h1>
                     
                 </div>
@@ -56,11 +56,7 @@
                             <label for="floatingInput">Brief description of fundraiser</label>
                             {{ form.summary(class="form-control") }}
                         </div>
-                        <div class="form-floating mb-3">
-                            
-                            <label for="floatingInput">Name of the creator</label>
-                            {{ form.created_by(class="form-control") }}
-                        </div>
+                        
                        <!--- <input type="file" name="file"><br>
                         <input type="submit" value="Upload">
                         <br />-->
